--- a/src/components/Dashboard/DashboardCard.css
+++ b/src/components/Dashboard/DashboardCard.css
@@ -5,7 +5,6 @@
   border-radius: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
-  align-items: center;
   overflow: hidden;
   margin: 0 auto;
   position: absolute;
@@ -52,11 +51,20 @@
   gap: 8px;
   padding: 24px;
   flex-grow: 1;
+  overflow-y: auto;
 }
 
-/* Media Query for smaller screens */
 @media (max-width: 768px) {
+  .dashboard-card {
+    height: 100vh; 
+    top: 0;
+    left: 0;
+    transform: none;
+  }
+
   .main-buttons {
     grid-template-columns: 1fr;
+    justify-items: center;
+    overflow-y: auto; 
   }
 }
