--- a/src/components/UIs/PrimaryButton/PrimaryButton.css
+++ b/src/components/UIs/PrimaryButton/PrimaryButton.css
@@ -9,21 +9,29 @@
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
-  width: 100%;
-  max-width: 320px;
-  transition: background-color 0.3s ease;
+  width: 100%; 
+  max-width: 320px; 
+  transition: background-color 0.3s ease, width 0.3s ease, padding 0.3s ease, font-size 0.3s ease;
 }
 
 .primary-button:hover {
-  background-color: #4b007a; /* Cor mais escura no hover */
+  background-color: #4b007a; 
 }
 
 .button-icon {
-  width: 20px; /* Define largura do ícone */
-  height: 20px; /* Define altura do ícone */
+  width: 20px;
+  height: 20px; 
   margin-right: 8px;
 }
 
 .button-text {
   white-space: nowrap;
+}
+
+@media (max-width: 400px) {
+  .primary-button {
+    width: 60%; 
+    padding: 6px 12px;
+    font-size: 0.8rem;
+  }
 }
