--- a/src/components/UIs/SecondaryButton/SecondaryButton.css
+++ b/src/components/UIs/SecondaryButton/SecondaryButton.css
@@ -11,7 +11,7 @@
   cursor: pointer;
   width: 100%;
   max-width: 320px;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease, width 0.3s ease, padding 0.3s ease, font-size 0.3s ease;
 }
 
 .secondary-button:hover {
@@ -19,11 +19,19 @@
 }
 
 .button-icon {
-  width: 20px; /* Define largura do ícone */
-  height: 20px; /* Define altura do ícone */
+  width: 20px; 
+  height: 20px; 
   margin-right: 8px;
 }
 
 .button-text {
   white-space: nowrap;
+}
+
+@media (max-width: 400px) {
+  .secondary-button {
+    width: 60%; 
+    padding: 6px 12px;
+    font-size: 0.8rem;
+  }
 }
