--- a/src/components/LoadingScreen/LoadingScreen.css
+++ b/src/components/LoadingScreen/LoadingScreen.css
@@ -43,7 +43,7 @@
   height: 100%;
   background-color: white;
   border-radius: 6px;
-  transition: width 0.3s ease;
+ /*  transition: width 0.3s ease; */
 }
 
 .loading-percentage {
