--- a/src/components/Commons/UI/ImageButton/ImageButton.css
+++ b/src/components/Commons/UI/ImageButton/ImageButton.css
@@ -3,8 +3,6 @@
   width: 100%;
   max-width: 300px;
   height: 190px;
-  background-size: cover;
-  background-position: top;
   border-radius: 20px;
   overflow: hidden;
   cursor: pointer;
@@ -14,8 +12,22 @@
   justify-content: flex-start;
 }
 
-.image-button:hover {
+.image-button.completed:hover, .image-button.unlocked:hover {
   transform: scale(1.02);
+}
+
+.image-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.preloaded-image {
+  height: 100%;
+  object-fit: cover;
 }
 
 .title {
@@ -28,7 +40,7 @@
   text-align: left;
   box-sizing: border-box;
   position: relative; 
-  z-index: 2; 
+  z-index: 3; 
 }
 
 .overlay {
@@ -38,7 +50,7 @@
   width: 100%;
   height: 100%;
   border-radius: 20px;
-  z-index: 1;
+  z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
