--- a/src/components/Commons/UI/Card/Card.css
+++ b/src/components/Commons/UI/Card/Card.css
@@ -54,3 +54,21 @@
   align-items: center; 
   gap: 8px;
 }
+
+@media screen and (max-height: 460px) {
+  .card-image-wrapper {
+    height: 180px;
+  }
+  .card-content {
+    padding: 20px;
+  }  
+}
+
+@media screen and (max-height: 420px) {
+  .card-image-wrapper {
+    height: 160px;
+  }
+  .card-content {
+    padding: 10px;
+  }  
+}
