--- a/src/components/Commons/UI/Slots/Slot/Slot.css
+++ b/src/components/Commons/UI/Slots/Slot/Slot.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   margin: 0 10px;
+  animation: scaleIn 0.5s ease-out forwards;
 }
 
 .slot-ui-container:hover {
@@ -33,4 +34,30 @@
   border-radius: 50%;
   background-color: #660099;
   position: absolute;
+}
+
+@keyframes scaleIn {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  70% {
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes scaleOut {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0);
+    opacity: 0;
+  }
 }
