--- a/src/components/Commons/UI/Slots/Slot/Slot.css
+++ b/src/components/Commons/UI/Slots/Slot/Slot.css
@@ -8,7 +8,6 @@
   justify-content: center;
   align-items: center;
   margin: 0 10px;
-  animation: scaleIn 0.5s ease-out forwards;
 }
 
 .slot-ui-container:hover {
@@ -36,7 +35,8 @@
   position: absolute;
 }
 
-@keyframes scaleIn {
+/* Animação */
+@keyframes slotScaleIn {
   0% {
     transform: scale(0);
     opacity: 0;
@@ -51,13 +51,30 @@
   }
 }
 
-@keyframes scaleOut {
+@keyframes slotScaleOut {
   0% {
     transform: scale(1);
     opacity: 1;
+  }
+  30% {
+    transform: scale(1.05);
+    opacity: 0.8;
   }
   100% {
     transform: scale(0);
     opacity: 0;
   }
+}
+
+.slot-ui-container.hidden {
+  transform: scale(0);
+  opacity: 0;
+}
+
+.slot-ui-container.visible {
+  animation: slotScaleIn 0.5s ease-out forwards;
+}
+
+.slot-ui-container.hiding {
+  animation: slotScaleOut 0.5s ease-in forwards;
 }
