--- a/src/components/Commons/UI/InstructionWithTimer/InstructionWithTimer.css
+++ b/src/components/Commons/UI/InstructionWithTimer/InstructionWithTimer.css
@@ -12,7 +12,7 @@
 
 .timer-container {
   width: 100%;
-  height: 6px;
+  height: 10px;
   background-color: rgba(102, 0, 153, 0.2);
   border-radius: 4px;
   position: relative;
@@ -24,7 +24,9 @@
   height: 100%;
   background-color: #660099;
   border-radius: 4px;
-  transition: width 0.4s linear;
+  transition: width 1s linear; 
+  will-change: width; 
+  transform: translateZ(0); 
 }
 
 .timer-text {
