--- a/src/components/Commons/UI/Button/Button.css
+++ b/src/components/Commons/UI/Button/Button.css
@@ -6,6 +6,7 @@
   border-radius: 20px;
   padding: 10px 20px;
   font-size: 16px;
+  font-family: 'Roboto', sans-serif;
   cursor: pointer;
   width: 100%; 
   max-width: 320px; 
