--- a/src/components/Commons/UI/InstructionWithTimer/InstructionWithTimer.css
+++ b/src/components/Commons/UI/InstructionWithTimer/InstructionWithTimer.css
@@ -13,11 +13,10 @@
 .timer-container {
   width: 100%;
   height: 10px;
-  background-color: rgba(102, 0, 153, 0.2);
+  background-color: #E6E6E6;
   border-radius: 4px;
   position: relative;
   overflow: hidden;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2) inset;
 }
 
 .timer-progress {
