--- a/src/components/Commons/UI/Instruction/Instruction.css
+++ b/src/components/Commons/UI/Instruction/Instruction.css
@@ -2,22 +2,22 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 300px;
-  width: 100%;
+  max-width: 400px;
+  width: 95%;
   border-radius: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   background-color: #fff;
   margin: 0 auto;
   position: absolute;
-  top: 50%;
+  top: 40px;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
   z-index: 10; 
 }
 
 .instruction.with-extras {
-  max-width: 320px;
+  z-index: 10; 
 }
 
 .instruction-content {
@@ -28,7 +28,7 @@
 }
 
 .instruction-title {
-  font-size: 16px; 
+  font-size: 18px; 
   font-weight: bold;
   margin: 12px 0;
   padding: 0 24px;
@@ -38,9 +38,9 @@
 }
 
 .instruction-description {
-  font-size: 12px;
+  font-size: 17px;
   color: #283943; 
-  margin-bottom: 24px;
+  margin-bottom: 8px;
   font-family: 'Roboto', sans-serif; 
 }
 
@@ -52,30 +52,30 @@
 /* Animação */
 @keyframes instructionScaleIn {
   0% {
-    transform: translate(-50%, -50%) scale(0.8);
+    transform: translateX(-50%) scale(0.8);
     opacity: 0;
   }
   70% {
-    transform: translate(-50%, -50%) scale(1.05);
+    transform: translateX(-50%) scale(1.05);
     opacity: 1;
   }
   100% {
-    transform: translate(-50%, -50%) scale(1);
+    transform: translateX(-50%) scale(1);
     opacity: 1;
   }
 }
 
 @keyframes instructionScaleOut {
   0% {
-    transform: translate(-50%, -50%) scale(1);
+    transform: translateX(-50%) scale(1);
     opacity: 1;
   }
   30% {
-    transform: translate(-50%, -50%) scale(1.05);
+    transform: translateX(-50%) scale(1.05);
     opacity: 0.8;
   }
   100% {
-    transform: translate(-50%, -50%) scale(0.8);
+    transform: translateX(-50%) scale(0.8);
     opacity: 0;
   }
 }
@@ -85,10 +85,53 @@
 }
 
 .instruction.hidden {
-  transform: translate(-50%, -50%) scale(0.8);
+  transform: translateX(-50%) scale(0.8);
   opacity: 0;
 }
 
 .instruction.hiding {
   animation: instructionScaleOut var(--instruction-scale-out-duration, 500ms) ease-in forwards;
+}
+
+@media screen and (max-width: 768px) {
+  .instruction {
+    top: 30px;
+  }
+  
+  .instruction-content {
+    padding: 10px 15px;
+  }
+
+  .instruction-title {
+    font-size: 17px;
+    margin: 10px 0;
+    padding: 0 16px;
+    line-height: 20px;    
+  }
+  
+  .instruction-description {
+    font-size: 16px;
+    margin-bottom: 5px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .instruction {
+    top: 20px;
+  }
+  
+  .instruction-content {
+    padding: 8px 15px;
+  }
+  
+  .instruction-title {
+    font-size: 15px;
+    margin: 8px 0;
+    padding: 0 12px;
+    line-height: 18px;
+  }
+  
+  .instruction-description {
+    font-size: 14px;
+  }
 }
