--- a/src/components/Commons/UI/Button/Button.css
+++ b/src/components/Commons/UI/Button/Button.css
@@ -5,7 +5,7 @@
   border: none;
   border-radius: 20px;
   padding: 10px 20px;
-  font-size: 16px;
+  font-size: 14px;
   font-family: 'Roboto', sans-serif;
   cursor: pointer;
   width: 100%; 
@@ -19,16 +19,16 @@
 }
 
 .primary-button:hover {
-  background-color: #4b007a; 
+  background-color: #8e4eae; 
 }
 
 .secondary-button {
-  background-color: #e0e0e0;
-  color: white;
+  background-color: #E6E6E6;
+  color: #283943;
 }
 
 .secondary-button:hover {
-  background-color: #660099; 
+  background-color: #d1d1d1; 
 }
 
 .button-icon {
