--- a/src/components/Commons/UI/Card/Card.css
+++ b/src/components/Commons/UI/Card/Card.css
@@ -37,13 +37,14 @@
   font-size: 20px; 
   font-weight: bold;
   margin: 12px 0;
-  color: #660099; 
+  color: #283943; 
   font-family: 'Roboto', sans-serif;
   white-space: pre-line;
 }
 
 .card-description {
-  font-size: 14px;
+  font-size: 15px;
+  line-height: 20px;
   color: #283943; 
   margin-bottom: 24px;
   font-family: 'Roboto', sans-serif; 
