--- a/src/components/Commons/UI/Card/Card.css
+++ b/src/components/Commons/UI/Card/Card.css
@@ -4,7 +4,9 @@
   flex-direction: column;
   align-items: center;
   max-width: 368px;
-  width: 100%;
+  width: 96%;
+  height: auto;
+  max-height: calc(96vh);    
   border-radius: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -71,7 +73,20 @@
     height: 160px;
   }
   .card-content {
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 16px;
+  }  
+}
+
+@media screen and (max-height: 380px) {
+  .card-title {
+    font-size: clamp(14px, 5vh, 20px); 
+    margin: clamp(6px, 3vh, 12px) 0;
+  }
+  .card-description {
+    font-size: clamp(12px, 4vh, 15px);
+    line-height: clamp(16px, 5vh, 20px);
+    margin-bottom: clamp(10px, 6vh, 24px);
   }  
 }
 
