--- a/src/components/Commons/UI/Card/Card.css
+++ b/src/components/Commons/UI/Card/Card.css
@@ -6,7 +6,7 @@
   max-width: 368px;
   width: 96%;
   height: auto;
-  max-height: calc(96vh);    
+  max-height: 96vh;    
   border-radius: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
