Dashboard vertical responsive layout

--- a/src/components/Commons/UI/ImageButton/ImageButton.css
+++ b/src/components/Commons/UI/ImageButton/ImageButton.css
@@ -105,3 +105,10 @@
     height: 42vh;
   }
 }
+/* width breakpoints */
+@media (max-width: 576px) {
+  .image-button {
+    height: 18vh;
+    max-width: 100%;;
+  }
+}
