--- a/src/components/Dashboard/UI/DashboardCard.css
+++ b/src/components/Dashboard/UI/DashboardCard.css
@@ -128,3 +128,19 @@
   }  
 
 }
+@media (max-width: 576px) {
+  .dashboard-card {
+    flex-direction: column-reverse;
+  }
+  .main-buttons {
+    grid-template-columns: 1fr; 
+    overflow-y: auto; 
+    padding-bottom: clamp(0px, 2vh, 18px);     
+  } 
+  .sidebar-buttons {
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 8px;
+    padding-bottom: 16px;
+  }   
+}
