--- a/src/components/Commons/UI/Slots/Slots.css
+++ b/src/components/Commons/UI/Slots/Slots.css
@@ -1,14 +1,15 @@
 .slots-container {
   position: fixed;
-  top: 100px;
+  top: 0;
   left: 0;
   right: 0;
-  bottom: 60px; 
+  bottom: 0; 
   display: flex;
   justify-content: center;
-  align-items: end;
+  align-items: center;
   z-index: 100;
   pointer-events: none;
+  margin-top: min(18vh, 150px);  
 }
 
 .slots-wrapper {
