--- a/src/components/Commons/UI/Slots/Slot/Slot.css
+++ b/src/components/Commons/UI/Slots/Slot/Slot.css
@@ -1,7 +1,8 @@
 .slot-ui-container {
   position: relative;
-  width: 70px;
-  height: 70px;
+  width: 25%;
+  height: auto;
+  aspect-ratio: 1;
   cursor: pointer;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   display: flex;
@@ -22,10 +23,10 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  border: 1px solid white;
-  background-color: rgba(150, 0, 255, 0.1);
+  border: 3px solid white;
+  background-color: rgba(150, 0, 255, 0.55);
   position: absolute;
-  animation: slotPulse 2s infinite ease-in-out;
+  animation: slotPulse 1.2s infinite ease-in-out;
 }
 
 .slot-ui-container:hover .slot-circle {
@@ -50,10 +51,12 @@
     transform: scale(0);
     opacity: 0;
   }
+
   70% {
     transform: scale(1.1);
     opacity: 1;
   }
+
   100% {
     transform: scale(1);
     opacity: 1;
@@ -65,10 +68,12 @@
     transform: scale(1);
     opacity: 1;
   }
+
   30% {
     transform: scale(1.05);
     opacity: 0.8;
   }
+
   100% {
     transform: scale(0);
     opacity: 0;
@@ -80,10 +85,12 @@
     transform: scale(1);
     opacity: 1;
   }
+
   40% {
     transform: scale(1.4);
     opacity: 0.7;
   }
+
   100% {
     transform: scale(1.6);
     opacity: 0;
@@ -95,10 +102,12 @@
     transform: scale(1);
     box-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
   }
+
   50% {
-    transform: scale(1.05);
+    transform: scale(0.9);
     box-shadow: 0 0 12px rgba(255, 255, 255, 0.4);
   }
+
   100% {
     transform: scale(1);
     box-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
