--- a/src/components/Commons/UI/Button/Button.css
+++ b/src/components/Commons/UI/Button/Button.css
@@ -1,15 +1,16 @@
-.primary-button, .secondary-button {
+.primary-button,
+.secondary-button {
   display: flex;
   align-items: center;
   justify-content: center;
   border: none;
   border-radius: 20px;
   padding: 10px 20px;
-  font-size: 14px;
+  font-size: 16px;
   font-family: 'Roboto', sans-serif;
   cursor: pointer;
-  width: 100%; 
-  max-width: 320px; 
+  width: 100%;
+  max-width: 320px;
   transition: background-color 0.3s ease, width 0.3s ease, padding 0.3s ease, font-size 0.3s ease;
 }
 
@@ -19,7 +20,7 @@
 }
 
 .primary-button:hover {
-  background-color: #8e4eae; 
+  background-color: #8e4eae;
 }
 
 .secondary-button {
@@ -28,12 +29,12 @@
 }
 
 .secondary-button:hover {
-  background-color: #d1d1d1; 
+  background-color: #d1d1d1;
 }
 
 .button-icon {
   width: 20px;
-  height: 20px; 
+  height: 20px;
   margin-right: 8px;
 }
 
@@ -48,16 +49,20 @@
 
 /* height breakpoints */
 @media screen and (max-height: 380px) {
-  .primary-button, .secondary-button {
+
+  .primary-button,
+  .secondary-button {
     font-size: clamp(12px, 3vh, 14px);
     padding: clamp(8px, 2.5vh, 10px) 20px;
-  } 
+  }
 }
 
 /* width breakpoints */
 @media screen and (max-width: 320px) {
-  .primary-button, .secondary-button {
+
+  .primary-button,
+  .secondary-button {
     font-size: clamp(12px, 5vw, 14px);
     padding: clamp(8px, 4vw, 10px) 20px;
-  } 
+  }
 }
