--- a/src/components/Commons/UI/ImageButton/ImageButton.css
+++ b/src/components/Commons/UI/ImageButton/ImageButton.css
@@ -30,20 +30,10 @@
   z-index: 1;
 }
 
-.ib-image-prel {
-  position: relative;
-  width: 100%;
+.preloaded-image {
   height: 100%;
-  overflow: hidden;
   object-fit: cover;
 }
-
-.ib-image-prel img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-} 
 
 .title {
   font-size: 16px;
