--- a/src/components/Commons/UI/PreloadedImage/PreloadedImage.css
+++ b/src/components/Commons/UI/PreloadedImage/PreloadedImage.css
@@ -1,4 +1,4 @@
-/* .preloaded-image-container {
+.preloaded-image-container {
   position: relative;
   width: 100%;
   height: 100%;
@@ -31,4 +31,3 @@
     background-position: 100% 0;
   }
 }
- */
